Fix CARGO-492 : The cargo.jvmargs element is instable against formatting: added testJvmArgs